force-app/main/default/objects/HomologationUser__c/HomologationUser__c.object-meta.xml
<CustomObject>
    <label>Homologation User</label>
    <nameField>
        <displayFormat>HU-{0000}</displayFormat>
        <label>Homologation User Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Homologation Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>