force-app/main/default/objects/HomologationUser__c/fields/Idioma__c.field-meta.xml
<CustomField>
    <fullName>Idioma__c</fullName>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Português</fullName>
            </value>
            <value>
                <fullName>Inglês</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>