force-app/main/default/objects/HomologationUser__c/fields/Nivel_de_Acesso__c.field-meta.xml
<CustomField>
    <fullName>Nivel_de_Acesso__c</fullName>
    <label>Nível de Acesso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full User</fullName>
            </value>
            <value>
                <fullName>Restricted User</fullName>
            </value>
            <value>
                <fullName>View Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>