force-app/main/default/objects/HomologationUser__c/fields/Nome_e_Sobrenome__c.field-meta.xml
<CustomField>
    <fullName>Nome_e_Sobrenome__c</fullName>
    <label>Nome e Sobrenome</label>
    <length>50</length>
    <type>Text</type>
</CustomField>