force-app/main/default/objects/HomologationUser__c/fields/Users__c.field-meta.xml
<CustomField>
    <fullName>Users__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Homologation Form</label>
    <referenceTo>HomologationForm__c</referenceTo>
    <relationshipLabel>Homologation Users</relationshipLabel>
    <relationshipName>Homologation_Users</relationshipName>
    <type>Lookup</type>
</CustomField>