force-app/main/default/objects/HomologationUser__c/listViews/CEO_HomologationUser.listView-meta.xml
<ListView>
    <fullName>CEO_HomologationUser</fullName>
    <filterScope>Queue</filterScope>
    <label>CEO</label>
    <queue>CEO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>