force-app/main/default/objects/HomologationUser__c/listViews/Director_HomologationUser.listView-meta.xml
<ListView>
    <fullName>Director_HomologationUser</fullName>
    <filterScope>Queue</filterScope>
    <label>Director</label>
    <queue>Director</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>