force-app/main/default/objects/HomologationUser__c/listViews/Legal_Compliance_HomologationUser.listView-meta.xml
<ListView>
    <fullName>Legal_Compliance_HomologationUser</fullName>
    <filterScope>Queue</filterScope>
    <label>Legal &amp; Compliance</label>
    <queue>Legal_Compliance</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>